--- a/app/src/main/res/layout/fragment_coin_description.xml
+++ b/app/src/main/res/layout/fragment_coin_description.xml
@@ -6,16 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".fragments.CoinDescriptionFragment">
 
+    <Button
+        android:id="@+id/exit_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/black"
+        android:text="Back"
+        android:drawableStart="@drawable/chevron_left"
+        android:drawableTint="@color/white"
+        app:tint="@android:color/white"
+        android:drawablePadding="7dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/share_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/share"
+        android:contentDescription="Share"
+        app:tint="@android:color/white"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/favourite_btn"/>
+
+    <ImageView
+        android:id="@+id/favourite_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/favourite_unfilled"
+        android:contentDescription="Favourite"
+        app:tint="@android:color/white"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <TextView
         android:id="@+id/coin_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Coin Name"
-        android:textSize="18sp"
+        android:textSize="19sp"
         android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="17dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintTop_toBottomOf="@id/exit_btn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -23,9 +60,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Coin Symbol"
-        android:textSize="16sp"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
+        android:textSize="17sp"
+        android:layout_marginTop="11dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintTop_toBottomOf="@id/coin_name"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -34,12 +71,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Coin Price"
-        android:textSize="16sp"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
+        android:textSize="17sp"
+        android:layout_marginTop="11dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintTop_toBottomOf="@id/coin_symbol"
         app:layout_constraintStart_toStartOf="parent" />
 
-<!--    TODO: +++ market cap, 24-hour trading volume and price chart -->
+<!-- TODO: fix arrow color -->
+<!-- TODO: + market cap, 24-hour trading volume and price chart -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
