--- a/app/src/main/res/layout/coin_view.xml
+++ b/app/src/main/res/layout/coin_view.xml
@@ -7,95 +7,100 @@
     android:background="@color/black"
     android:clickable="true">
 
-    <TextView
-        android:id="@+id/view_text_id"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_layout_clickable"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/white"
-        android:text="1"
-        app:layout_constraintRight_toLeftOf="@id/view_image_coin"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="19sp"
-        android:layout_marginVertical="35dp"/>
+        app:layout_constraintRight_toLeftOf="@id/constraint_layout_buttons"
+        android:layout_marginEnd="40dp">
 
-    <ImageView
-        android:id="@+id/view_image_coin"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginVertical="35dp"
-        android:layout_marginLeft="17dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/view_text_id"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.585" />
+        <ImageView
+            android:id="@+id/view_image_coin"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginVertical="35dp"
+            android:layout_marginStart="17dp"
+            android:contentDescription="@string/coin_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.585" />
 
-    <TextView
-        android:id="@+id/view_text_symbol"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/view_text_symbol"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="19sp"
+            android:gravity="center_vertical"
+            android:layout_marginStart="65dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/view_image_coin"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/view_text_price"
+            android:layout_marginVertical="35dp"/>
+
+        <TextView
+            android:id="@+id/view_text_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="19sp"
+            android:gravity="center_vertical"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/view_text_symbol"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginVertical="35dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_layout_buttons"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="19sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/view_image_coin"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/view_text_price"
-        android:layout_marginVertical="35dp"/>
-
-    <TextView
-        android:id="@+id/view_text_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="19sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/view_text_symbol"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/display_btn"
-        android:layout_marginVertical="35dp"/>
-
-    <ImageView
-        android:id="@+id/display_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/display"
-        app:tint="@android:color/white"
-        android:contentDescription="Display"
-        android:layout_marginEnd="5dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/share_btn"/>
+        app:layout_constraintLeft_toRightOf="@id/constraint_layout_clickable">
 
-    <ImageView
-        android:id="@+id/share_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/share"
-        app:tint="@android:color/white"
-        android:contentDescription="Share"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/favourite_btn"/>
+        <ImageView
+            android:id="@+id/share_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/share"
+            app:tint="@android:color/white"
+            android:contentDescription="@string/share"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/favourite_btn"/>
 
-    <ImageView
-        android:id="@+id/favourite_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/favourite_unfilled"
-        app:tint="@android:color/white"
-        android:contentDescription="Favourite"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        <ImageView
+            android:id="@+id/favourite_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/favourite_unfilled"
+            app:tint="@android:color/white"
+            android:contentDescription="@string/favourite"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <View
         android:layout_width="0dp"
-        android:layout_height="1dp"
+        android:layout_height="3dp"
+        android:backgroundTint="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
