--- a/app/src/main/res/layout/fragment_coin_description.xml
+++ b/app/src/main/res/layout/fragment_coin_description.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".fragments.CoinDescriptionFragment">
 
     <Button
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:text="Back"
-        android:drawableStart="@drawable/chevron_left"
+        android:drawableLeft="@drawable/chevron_left"
         android:drawableTint="@color/white"
         app:tint="@android:color/white"
         android:drawablePadding="7dp"
@@ -77,7 +78,6 @@
         app:layout_constraintTop_toBottomOf="@id/coin_symbol"
         app:layout_constraintStart_toStartOf="parent" />
 
-<!-- TODO: fix arrow color -->
 <!-- TODO: + market cap, 24-hour trading volume and price chart -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
