--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -21,12 +21,12 @@
        app:layout_constraintBottom_toBottomOf="parent"/>
 
    <Button
-       android:visibility="invisible"
+       android:visibility="gone"
        android:id="@+id/main_screen_refresh"
-       android:layout_width="0dp"
-       android:layout_height="0dp"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
        android:textColor="@color/white"
-       android:backgroundTint="@color/black"
+       android:backgroundTint="@color/black_light"
        android:text="@string/refresh"
        android:drawableEnd="@drawable/refresh"
        android:drawableTint="@color/white"
