--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -7,6 +7,21 @@
     android:orientation="vertical"
     tools:context=".fragments.PopularFragment">
 
+    <Button
+        android:visibility="gone"
+        android:id="@+id/popular_screen_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/black_light"
+        android:text="@string/refresh"
+        android:drawableEnd="@drawable/refresh"
+        android:drawableTint="@color/white"
+        android:drawablePadding="7dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
