--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#000000</color>
+    <color name="black_light">#201F1F</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#DFDCDC</color>
     <color name="gray_low_op">#4FDFDCDC</color>
